# HotelManager

./: .gitignore  CMakeLists.txt
dep/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/exceptions/: RoomHandlersException.hpp
src/core/exceptions/base/: BaseException.hpp
src/core/handlers/: AddRoomHandler.hpp  CheckOccupyRoomHandler.hpp  RemoveRoomHandler.hpp
src/core/handlers/base/: IHandler.hpp  IRoomHandler.hpp
src/core/systems/: CMakeLists.txt  HotelMgr.cpp  HotelMgr.hpp  RoomMgr.cpp  RoomMgr.hpp
src/core/systems/base/: HotelStructure.hpp  RoomStructure.hpp
tests/: CMakeLists.txt  tester.cpp
tests/systems/: HotelManagerTests.hpp  RoomManagerTests.cpp  RoomManagerTests.hpp
